--- a/package.json
+++ b/package.json
@@ -4,8 +4,23 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.3",
     "nodemon": "^3.1.9"
-  }
+  },
+  "name": "food-delivery-backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {
+    "type": "module"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "author": "kazi mehedi hasan",
+  "license": "ISC",
+  "description": ""
 }
